syntax = "proto3";

package auth;

option go_package = "github.com/Kovalyovv/auth-service/internal/delivery/grpc/pb";

service AuthService {
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  int64 user_id = 1;
  bool valid = 2;
}